Fix Flex-wrap

--- a/css.css
+++ b/css.css
@@ -67,6 +67,7 @@ body{
     padding: 0px 30px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .socials a{
